add cancel and delete functionality (wip)
